force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
    <description
  >The Purchase object records customer purchase transactions linked to an Account. It tracks Client, TotalItems (count of lines), and GrandTotal (sum of line costs), both auto-calculated by trigger. Commonly used for order management, financial reporting, and purchase history review.</description>
    <label>Purchase</label>
    <nameField>
        <label>Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>