force-app/main/default/objects/Purchase__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Sum of Amount * UnitCost across all purchase lines; auto-calculated by trigger</description>
    <inlineHelpText
  >Automatically updated when purchase lines are added, changed, or removed</inlineHelpText>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>