force-app/main/default/objects/Purchase__c/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Total quantity of purchased items; auto-calculated by trigger</description>
    <inlineHelpText
  >Automatically updated from the Amount values on purchase lines</inlineHelpText>
    <label>Total Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>